--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,42 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+li,
+ul {
+  text-decoration: none;
+}
+
+.show {
+  display: block;
+}
+
+#saveBtn {
+  position: absolute;
+  margin-left: 65px;
+  margin-top: 34px;
+}
+
+.item__inner {
+  width: 600px;
+  margin: 10px auto;
+  border-bottom: 1px solid rgb(83, 82, 82);
+}
+
+.container {
+  margin: 0 auto;
+}
+
+.d-inline {
+  margin-top: 10px;
 }
